TSF-868 Sender inn søknadsperioder til regel